// Copyright 2025 The Tickex Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package tickex.stdx.v1;

import "tickex/stdx/v1/service.proto";

import "buf/validate/validate.proto";

option go_package = "github.com/tickexvn/tickex/api/gen/go/stdx/v1;stdx";

// Define the service registry
service DiscoveryService {
  // Register a new service
  rpc Register(RegisterRequest) returns (RegisterResponse);

  // Discover a service by name
  rpc Discover(DiscoverRequest) returns (DiscoverResponse);

  // Health check to maintain service status
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

// Detailed service information
message RegisterRequest {
  tickex.stdx.v1.Service service = 1;
  ServiceCheck service_check = 2;
}

message HeartbeatRequest {
  string id = 1 [(buf.validate.field).string.min_len = 2];
}

message ServiceCheck {
  string deregister_critical_service_after = 1;
  string ttl = 2;
  bool tls_skip_verify = 3;
}

// Request to find a service
message DiscoverRequest {
  string name = 1;  // Name of the service to discover
}

// Response from the discovery process
message DiscoverResponse {
  repeated tickex.stdx.v1.Service services = 1;  // List of service instances
}

// Service registration response
message RegisterResponse {
  string message = 1;  // Result message
}

// Heartbeat response
message HeartbeatResponse {
  bool success = 1;  // Heartbeat status
}